# pymolecule

./: .coveragerc  .gitignore  .pytest.ini  README.md  mkdocs.yml  pixi.toml  pyproject.toml
docs/: gen_ref_pages.py
pymolecule/: __init__.py  fileio.py  geometry.py  info.py  manipulation.py  molecule.py  other.py  quaternion.py  selection.py  structure.py
tests/: conftest.py  test_loading.py
