[project]
name = "pymolecule"
version = "0.0.1"
authors = [
    {name = "Durrant Lab", email = "durrantj@pitt.edu"}
]
maintainers = [
    {name = "Jacob Durrant", email = "durrantj@pitt.edu"},
    {name = "Alex Maldonado", email = "alex.maldonado@pitt.edu"},
]
description = "TODO"
readme = "README.md"
requires-python = ">=3.10"
# TODO: Keep this here until pixi releases building capabilities
dependencies = [
    "numpy>=2.1.3,<3",
    "scipy>=1.14.1,<2",
]
license = "Apache-2.0"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["pymolecule*"]
